# TalkinBaseball

./: .gitignore  Makefile  README.md  pyproject.toml
Agent/: Makefile  tools.yaml
Agent/pitcher_data/: agent.py
Agent/voice/: agent.py
data/: grab_players.py  grab_stats.py  load_pitchabbr.py  load_pitches.py  load_players.py
data/files/: .gitattributes  pitches.csv  players.csv
data/models/: data.py
docs/: diagram.dot  script.md
